Fixed text alignment of the cards

--- a/main.css
+++ b/main.css
@@ -330,6 +330,7 @@ body {
     height: 400px;
     margin: 10px 0;
     position: relative;
+    text-align: center;
 }
 
 .overlay {
